--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="referrer" content="never">
   <title>Comment</title>
-  <script type="module" crossorigin src="/comment-online/assets/index.ddea92cb.js"></script>
-  <link rel="modulepreload" href="/comment-online/assets/vendor.d778eabf.js">
-  <link rel="stylesheet" href="/comment-online/assets/style.1b4006c5.css">
+  <script type="module" crossorigin src="/comment-online/assets/index.b7326265.js"></script>
+  <link rel="modulepreload" href="/comment-online/assets/vendor.30d06945.js">
+  <link rel="stylesheet" href="/comment-online/assets/style.92fa0874.css">
 </head>
 
 <body>
