--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 
 <head>
   <meta charset="UTF-8" />
@@ -7,9 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="referrer" content="never">
   <title>Comment</title>
-  <script type="module" crossorigin src="/comment-online/assets/index.eb4c2429.js"></script>
-  <link rel="modulepreload" href="/comment-online/assets/vendor.79776c56.js">
-  <link rel="stylesheet" href="/comment-online/assets/index.21acd9e8.css">
+  <script type="module" crossorigin src="/assets/index.098a559a.js"></script>
+  <link rel="modulepreload" href="/assets/@vue.52a39649.js">
+  <link rel="modulepreload" href="/assets/date-fns.ecfd739c.js">
+  <link rel="modulepreload" href="/assets/evtd.5b1ed12a.js">
+  <link rel="modulepreload" href="/assets/vooks.93cfeba1.js">
+  <link rel="modulepreload" href="/assets/seemly.22a54011.js">
+  <link rel="modulepreload" href="/assets/@css-render.75c7e5e3.js">
+  <link rel="modulepreload" href="/assets/@emotion.6322e2ae.js">
+  <link rel="modulepreload" href="/assets/css-render.d5050412.js">
+  <link rel="modulepreload" href="/assets/vdirs.03f40802.js">
+  <link rel="modulepreload" href="/assets/resize-observer-polyfill.8deb1e21.js">
+  <link rel="modulepreload" href="/assets/vueuc.ab4671c2.js">
+  <link rel="modulepreload" href="/assets/lodash-es.d2ae6988.js">
+  <link rel="modulepreload" href="/assets/naive-ui.b856d02e.js">
+  <link rel="modulepreload" href="/assets/timeago.js.7896a252.js">
+  <link rel="modulepreload" href="/assets/axios.8ff7c743.js">
+  <link rel="stylesheet" href="/assets/index.8246abe4.css">
 </head>
 
 <body>
