--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="referrer" content="never">
   <title>Comment</title>
-  <script type="module" crossorigin src="/comment-online/assets/index.4fd22e2f.js"></script>
+  <script type="module" crossorigin src="/comment-online/assets/index.69c1d9ea.js"></script>
   <link rel="modulepreload" href="/comment-online/assets/@vue.52a39649.js">
   <link rel="modulepreload" href="/comment-online/assets/date-fns.ecfd739c.js">
   <link rel="modulepreload" href="/comment-online/assets/evtd.5b1ed12a.js">
@@ -23,7 +23,8 @@
   <link rel="modulepreload" href="/comment-online/assets/naive-ui.b856d02e.js">
   <link rel="modulepreload" href="/comment-online/assets/timeago.js.7896a252.js">
   <link rel="modulepreload" href="/comment-online/assets/axios.8ff7c743.js">
-  <link rel="stylesheet" href="/comment-online/assets/index.8cdf5813.css">
+  <link rel="modulepreload" href="/comment-online/assets/medium-zoom.0cdb07e4.js">
+  <link rel="stylesheet" href="/comment-online/assets/index.66431045.css">
 </head>
 
 <body>
